--- a/shop.html
+++ b/shop.html
@@ -184,9 +184,16 @@
 
   <input type="number" class="quantity-input" value="1" min="1">
   <button class="btn add-to-cart">Add to Cart</button>
+  <a
+  href="https://wa.me/2348146814953?text=Hello%20I%20need%20help"
+  class="whatsapp-float"
+  target="_blank"
+  aria-label="Chat on WhatsApp"
+>
+  <img
+    src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg"
+    alt="WhatsApp"
+  />
+<script src="script.js"></script>
 </div>
 </section>
-
-<script src="script.js"></script>
-</body>
-</html>
