--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
 <!-- FORMSPREE -->
 <form
   id="checkout-form"
-  action="https://formspree.io/f/xgvnkbnj"
+  action="https://formspree.io/f/xovkdzwz"
   method="POST"
   style="display:none;"
 >
@@ -27,9 +27,7 @@
   <input type="hidden" id="order-details" name="order_details">
   <input type="hidden" id="total-amount" name="total_amount">
 </form>
-
-<script src="https://js.paystack.co/v1/inline.js"></script>
+  
 <script src="script.js"></script>
-
 </body>
 </html>
